--- a/datasets/proposta-lei-orcamentaria/datapackage.yaml
+++ b/datasets/proposta-lei-orcamentaria/datapackage.yaml
@@ -14,84 +14,357 @@ owner_org: controladoria-geral-do-estado-cge
 private: false
 profile: tabular-data-package
 resources:
-- name: ft_orcamento_proposta
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: ft_orcamento_proposta
   path: data/ft_orcamento_proposta.csv.gz
-- name: dm_acao_orcam
+  profile: tabular-data-resource
+  schema: schema/ft_orcamento_proposta.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_acao_orcam
   path: data/dm_acao_orcam.csv.gz
-- name: dm_categ_econ_orcam
+  profile: tabular-data-resource
+  schema: schema/dm_acao_orcam.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_categ_econ_orcam
   path: data/dm_categ_econ_orcam.csv.gz
-- name: dm_fonte_orcam
+  profile: tabular-data-resource
+  schema: schema/dm_categ_econ_orcam.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_fonte_orcam
   path: data/dm_fonte_orcam.csv.gz
-- name: dm_funcao_orcam
+  profile: tabular-data-resource
+  schema: schema/dm_fonte_orcam.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_funcao_orcam
   path: data/dm_funcao_orcam.csv.gz
-- name: dm_grupo_orcam
+  profile: tabular-data-resource
+  schema: schema/dm_funcao_orcam.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_grupo_orcam
   path: data/dm_grupo_orcam.csv.gz
-- name: dm_indic_acao_orcam
+  profile: tabular-data-resource
+  schema: schema/dm_grupo_orcam.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_indic_acao_orcam
   path: data/dm_indic_acao_orcam.csv.gz
-- name: dm_modal_aplic_orcam
+  profile: tabular-data-resource
+  schema: schema/dm_indic_acao_orcam.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_modal_aplic_orcam
   path: data/dm_modal_aplic_orcam.csv.gz
-- name: dm_orgao_orcam
+  profile: tabular-data-resource
+  schema: schema/dm_modal_aplic_orcam.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_orgao_orcam
   path: data/dm_orgao_orcam.csv.gz
-- name: dm_procedencia_orcam
+  profile: tabular-data-resource
+  schema: schema/dm_orgao_orcam.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_procedencia_orcam
   path: data/dm_procedencia_orcam.csv.gz
-- name: dm_programa_orcam
+  profile: tabular-data-resource
+  schema: schema/dm_procedencia_orcam.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_programa_orcam
   path: data/dm_programa_orcam.csv.gz
-- name: dm_subfuncao_orcam
+  profile: tabular-data-resource
+  schema: schema/dm_programa_orcam.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_subfuncao_orcam
   path: data/dm_subfuncao_orcam.csv.gz
-- name: dm_tempo_anual
+  profile: tabular-data-resource
+  schema: schema/dm_subfuncao_orcam.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_tempo_anual
   path: data/dm_tempo_anual.csv.gz
-- name: ft_orcamento_emenda
+  profile: tabular-data-resource
+  schema: schema/dm_tempo_anual.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: ft_orcamento_emenda
   path: data/ft_orcamento_emenda.csv.gz
-- name: dm_autor_emenda
+  profile: tabular-data-resource
+  schema: schema/ft_orcamento_emenda.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_autor_emenda
   path: data/dm_autor_emenda.csv.gz
-- name: dm_emenda_orcam
+  profile: tabular-data-resource
+  schema: schema/dm_autor_emenda.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_emenda_orcam
   path: data/dm_emenda_orcam.csv.gz
-- name: dm_tempo_anual
+  profile: tabular-data-resource
+  schema: schema/dm_emenda_orcam.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_tempo_anual
   path: data/dm_tempo_anual.csv.gz
-- name: ft_orcamento_cred_alt
+  profile: tabular-data-resource
+  schema: schema/dm_tempo_anual.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: ft_orcamento_cred_alt
   path: data/ft_orcamento_cred_alt.csv.gz
-- name: dm_acao
+  profile: tabular-data-resource
+  schema: schema/ft_orcamento_cred_alt.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_acao
   path: data/dm_acao.csv.gz
-- name: dm_categ_econ
+  profile: tabular-data-resource
+  schema: schema/dm_acao.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_categ_econ
   path: data/dm_categ_econ.csv.gz
-- name: dm_decreto
+  profile: tabular-data-resource
+  schema: schema/dm_categ_econ.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_decreto
   path: data/dm_decreto.csv.gz
-- name: dm_fonte
+  profile: tabular-data-resource
+  schema: schema/dm_decreto.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_fonte
   path: data/dm_fonte.csv.gz
-- name: dm_funcao_desp
+  profile: tabular-data-resource
+  schema: schema/dm_fonte.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_funcao_desp
   path: data/dm_funcao_desp.csv.gz
-- name: dm_grupo_desp
+  profile: tabular-data-resource
+  schema: schema/dm_funcao_desp.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_grupo_desp
   path: data/dm_grupo_desp.csv.gz
-- name: dm_indicador_acao
+  profile: tabular-data-resource
+  schema: schema/dm_grupo_desp.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_indicador_acao
   path: data/dm_indicador_acao.csv.gz
-- name: dm_modalidade_aplic
+  profile: tabular-data-resource
+  schema: schema/dm_indicador_acao.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_modalidade_aplic
   path: data/dm_modalidade_aplic.csv.gz
-- name: dm_procedencia
+  profile: tabular-data-resource
+  schema: schema/dm_modalidade_aplic.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_procedencia
   path: data/dm_procedencia.csv.gz
-- name: dm_programa
+  profile: tabular-data-resource
+  schema: schema/dm_procedencia.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_programa
   path: data/dm_programa.csv.gz
-- name: dm_subfuncao_desp
+  profile: tabular-data-resource
+  schema: schema/dm_programa.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_subfuncao_desp
   path: data/dm_subfuncao_desp.csv.gz
-- name: dm_tempo_anual
+  profile: tabular-data-resource
+  schema: schema/dm_subfuncao_desp.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_tempo_anual
   path: data/dm_tempo_anual.csv.gz
-- name: dm_unidade_orc
+  profile: tabular-data-resource
+  schema: schema/dm_tempo_anual.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_unidade_orc
   path: data/dm_unidade_orc.csv.gz
-- name: sa_indicador_acao
+  profile: tabular-data-resource
+  schema: schema/dm_unidade_orc.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: sa_indicador_acao
   path: data/sa_indicador_acao.csv.gz
-- name: ft_obra
+  profile: tabular-data-resource
+  schema: schema/sa_indicador_acao.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: ft_obra
   path: data/ft_obra.csv.gz
-- name: dm_municipio_obra
+  profile: tabular-data-resource
+  schema: schema/ft_obra.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_municipio_obra
   path: data/dm_municipio_obra.csv.gz
-- name: dm_obra
+  profile: tabular-data-resource
+  schema: schema/dm_municipio_obra.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_obra
   path: data/dm_obra.csv.gz
-- name: dm_orgao_obra
+  profile: tabular-data-resource
+  schema: schema/dm_obra.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_orgao_obra
   path: data/dm_orgao_obra.csv.gz
-- name: dm_situacao_obra
+  profile: tabular-data-resource
+  schema: schema/dm_orgao_obra.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_situacao_obra
   path: data/dm_situacao_obra.csv.gz
-- name: dm_tempo_anual
+  profile: tabular-data-resource
+  schema: schema/dm_situacao_obra.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_tempo_anual
   path: data/dm_tempo_anual.csv.gz
-- name: dm_territorio_planeja
+  profile: tabular-data-resource
+  schema: schema/dm_tempo_anual.csv.gz
+  title: ''
+- description: ''
+  dialect: schema/dialect-v1.json
+  encoding: UTF-8
+  format: csv
+  name: dm_territorio_planeja
   path: data/dm_territorio_planeja.csv.gz
+  profile: tabular-data-resource
+  schema: schema/dm_territorio_planeja.csv.gz
+  title: ''
 sources: null
 state: active
 title: null
